# ideaDog_server

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  PR for develop into master  README.md  appveyor.yml  config.toml
app/: Cargo.toml
app/src/: ideas.rs  main.rs  midware.rs  tags.rs  util.rs  views.rs
app/src/views/: auth.rs  ideas.rs  mod.rs  search.rs  tags.rs  users.rs
ci/: before_deploy.ps1
src/: database.rs  error.rs  lib.rs  models.rs
src/models/: challenge.rs  handler.rs  ideas.rs  message.rs  mod.rs  tags.rs  users.rs
src/models/handler/: challenge.rs  ideas.rs  mod.rs  tags.rs  users.rs
src/models/message/: challenge.rs  ideas.rs  tags.rs  users.rs
