[package]
name = "ideadog"
version = "0.1.10"
authors = ["martin smith <msmith3d@icloud.com>"]
edition = "2018"

[workspace]
members = [".", "app"]

[dependencies]
r2d2 = "0.8.4"
chrono = "0.4.6"
actix = "0.7"
actix-web = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.92"
serde_json = "1.0"
futures = "0.1.27"
rand = "0.6.5"
failure = "0.1.5"
reqwest = "0.9.18"

#r2d2-arangodb = {path = "../r2d2-arangodb"}
#arangors = {path = "../arangors"}

[dependencies.arangors]
git = "https://github.com/Ostoyae/arangors.git"
branch = "develop"

[dependencies.r2d2-arangodb]
git = "https://github.com/Ostoyae/r2d2-arangodb.git"
version = "0.1"
branch = "develop"

