[package]
name = "ideadog-server"
version = "0.1.0"
authors = ["martin smith <msmith3d@icloud.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7"
arangors = {path = "../../arangors"}
env_logger = "0.6.1"
ideadog = {path = ".."}
futures = "0.1.27"
log = "0.4.6"
r2d2-arangodb = {path = "../../r2d2-arangodb"}
r2d2 = "0.8.4"
serde = "1.0.92"
serde_derive = "1.0.92"
dotenv = "0.14.1"


[package.metadata.deb]
depends = "$auto"


